--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Auth
+server.servlet.context-path=/api/v1
+## DATABASE CONFIGURATION
+spring.datasource.url=jdbc:postgresql://localhost:5435/database-auth
+spring.datasource.username=angel-dev
+spring.datasource.password=angel-dev
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+app.jwtSecret=eW91ci12ZXJ5LXNlY3VyZS1zZWNyZXQta2V5LWhlcmU
+app.jwtExpirationMs=86400000
