--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/vue-query": "^5.82.0",
+    "@tanstack/vue-query-devtools": "^5.82.0",
+    "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
